--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<html lang="en" class="washington-dc">
+<html lang="en" class="richmond-va">
 <head>
   <meta charset="utf-8">
   <title>AstralWeather</title>
